--- a/JS Fundamentals - Part 1 /index.html
+++ b/JS Fundamentals - Part 1 /index.html
@@ -27,6 +27,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-<h1>JavaScript Fundamentals – Part 1</h1>
+<h1>JavaScript Fundamentals</h1>
+<h2>Part 1</h2>
 </body>
 </html>
